fix: aXe colour contrast fix

--- a/src/scss/_components/_content.scss
+++ b/src/scss/_components/_content.scss
@@ -36,7 +36,7 @@
 	}
 
 	&__meta-info {
-		color: rgba(0, 0, 0, 0.5);
+		color: rgba(0, 0, 0, 0.54);
 		font-weight: 400;
 		font-size: 0.875rem;
 		letter-spacing: inherit;
@@ -54,25 +54,4 @@
 
 .article__main-header li.h-list__item + .h-list__item {
 	margin-left: 2px;
-}
-
-[role="navigation"] {
-	.h-list {
-		padding: 0;
-	}
-
-	.h-list__item {
-		a {
-			padding: 4px $base-spacing / 2;
-
-			@media screen and (min-width: 30em) {
-				padding: $base-spacing / 2 $base-spacing * 2;
-			}
-		}
-	}
-
-	.h-list__item + .h-list__item {
-		// border-left: 1px solid #c1c1c1;
-		margin-left: 0;
-	}
 }
